# Archbox

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  info.rs  install.rs  interactive.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
src/completions/: mod.rs
src/config/: settings.rs
src/groups/: mod.rs
src/package/: definition.rs  installer.rs  mod.rs
src/repository/: manager.rs
